# cpp_pivot_tables

./: .gitignore  CMakeLists.txt  README.md  cpp_pivot_tables.cpp  mean_dist_by_carrier_origin.csv  mean_dist_by_carrier_origin_region.csv  mean_passengers_by_carrier_origin_region.csv  passengers_by_carrier_origin.csv  pax_seats_deps_by_carrier_origin.csv  pax_seats_deps_by_carrier_origin_filtered.csv  pax_seats_deps_by_carrier_origin_region.csv  pax_seats_deps_by_carrier_origin_region_filtered.csv  pivot_compressors.cpp  pivot_compressors.h
Output/: pax_seats_deps_by_carrier_origin.csv  pax_seats_deps_by_carrier_origin_filtered.csv  pax_seats_deps_by_carrier_origin_in_memory_filtered.csv  pax_seats_deps_by_carrier_origin_region.csv  pax_seats_deps_by_carrier_origin_region_filtered.csv
